# egix

./: CMakeLists.txt  Dockerfile  README.md
include/: editor.hpp
include/egix/: editor.hpp
src/: editor.cpp  main.cpp  name_dialog.hpp  regopt.cpp  regopt.hpp
